# foowrite-core2

./: .gitignore  CMakeLists.txt  FOOWRITE_FIXES.md  KNOWN_ISSUES.md  NEXT.md  README.md  SD.md  release.sh  sdkconfig  sdkconfig.core2  sdkconfig.defaults  sdkconfig.defaults.esp32s3  sdkconfig.old  sdkconfig.waveshare349  sketch.md  testplan.md
contexts/: compaction-20260406-1.md  compaction-20260406-2.md  compaction-20260407-1.md  compaction-20260412-1.md  compaction-20260412-2.md  compaction-20260501-1.md  compaction-20260501-2.md  compaction-20260501-3.md  compaction-20260502-1.md  compaction-20260503-1.md  flicker-fix-plan.md
main/: CMakeLists.txt  axp192.cpp  axp192.h  axs15231b.cpp  axs15231b.h  ble_hid_host.cpp  ble_hid_host.h  board.h  board_core2.cpp  board_waveshare349.cpp  display_context.h  display_context_core2.cpp  display_context_waveshare349.cpp  editor.cpp  editor.h  editor_mode.h  key_queue.h  keymap.cpp  keymap.h  lgfx_config.h  main.cpp  output.cpp  output.hpp  sd_storage.cpp  sd_storage.h  splash.cpp  splash.h  version.h
tests/: CMakeLists.txt  editor_stubs.cc  editor_stubs.hpp  layout_map.h  test_basic_writing.cc  test_movements.cc  test_text_objects.cc
tests/stubs/driver/: i2c_master.h
web-flasher/: index.html
web-flasher/firmware/: manifest.json
